Corrected the time shift (text next to the time doesn't shift anymore)

--- a/Customer/www/styles/less/custom.less
+++ b/Customer/www/styles/less/custom.less
@@ -935,6 +935,7 @@ button.button.button-assertive {
 			margin-bottom: 0;
 			margin-top: 3px;
 			margin-right: 9px;
+			min-width: 92px;
 		}
 		p.exp_in {
 			color: #959595;
